syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
option java_package = "com.example.grpc";

message UserRequest {
  string userId = 1;
}

message UserResponse {
  string userId = 1;
  string name = 2;
  int32 age = 3;
}

service UserService {
  rpc GetUserInfo (UserRequest) returns (UserResponse);
}

